change the docker repository for the bitnami images

--- a/apps/appuio/prod/helm/values.yaml
+++ b/apps/appuio/prod/helm/values.yaml
@@ -64,6 +64,10 @@ affinity: {}
 
 postgresql:
   fullnameOverride: postgresql-keycloak
+  image:
+    registry: docker.io
+    repository: bitnamilegacy/postgresql
+    tag: 16.1.0-debian-11-r25
   service:
     ports:
       postgresql: 5432
